--- a/cryptoinfo/package.json
+++ b/cryptoinfo/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.22.0",
     "express": "^4.17.1",
+    "jest": "^26.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-test-renderer": "^17.0.2",
     "react-vis": "^1.11.7",
     "web-vitals": "^1.0.1"
   },
